<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Prompt Time</string>
    <string name="title_section_active_times">Active Times</string>
    <string name="title_section_prompt">Prompt</string>
    <string name="label_set_time_block">Confirm</string>
    <string name="label_remove_time_block">Remove</string>
    <string name="label_add_time_block">Add Prompt Time Block</string>
    <string name="label_time_block_start">Start</string>
    <string name="label_time_block_end">End</string>
    <string name="time_edit">Edit</string>

    <string name="label_activity_work">Work</string>
    <string name="label_activity_quick_task">Quick Task</string>
    <string name="label_activity_fun">Fun</string>
    <string name="label_activity_short_break">Short Break</string>

    <string name="label_time_block_toggle_monday">M</string>
    <string name="label_time_block_toggle_tuesday">T</string>
    <string name="label_time_block_toggle_wednesday">W</string>
    <string name="label_time_block_toggle_thursday">T</string>
    <string name="label_time_block_toggle_friday">F</string>
    <string name="label_time_block_toggle_saturday">S</string>
    <string name="label_time_block_toggle_sunday">S</string>

    <string name="label_prompt_now">Prompt Now</string>
    <string name="label_prompt_return">Return</string>
    <string name="label_prompt_five">5 Minutes</string>
    <string name="label_prompt_ten">10 Minutes</string>
    <string name="label_prompt_fifteen">15 Minutes</string>
    <string name="label_prompt_twenty_five">25 Minutes</string>
    <string name="label_prompt_hour">1 Hour</string>

</resources>
