<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:id="@+id/active_times_block"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
              tools:context=".PromptTime">

    <LinearLayout
        android:id="@+id/weekday_toggles"
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/time_block_spacing"
        android:gravity="center_vertical">

        <ToggleButton
            android:id="@+id/monday_toggle"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:textOn="@string/label_time_block_toggle_monday"
            android:textOff="@string/label_time_block_toggle_monday"
            android:onClick="onSetActiveTimes"/>

        <ToggleButton
            android:id="@+id/tuesday_toggle"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:textOn="@string/label_time_block_toggle_tuesday"
            android:textOff="@string/label_time_block_toggle_tuesday"
            android:onClick="onSetActiveTimes"/>

        <ToggleButton
            android:id="@+id/wednesday_toggle"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:textOn="@string/label_time_block_toggle_wednesday"
            android:textOff="@string/label_time_block_toggle_wednesday"
            android:onClick="onSetActiveTimes"/>

        <ToggleButton
            android:id="@+id/thursday_toggle"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:textOn="@string/label_time_block_toggle_thursday"
            android:textOff="@string/label_time_block_toggle_thursday"
            android:onClick="onSetActiveTimes"/>

        <ToggleButton
            android:id="@+id/friday_toggle"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:textOn="@string/label_time_block_toggle_friday"
            android:textOff="@string/label_time_block_toggle_friday"
            android:onClick="onSetActiveTimes"/>

        <ToggleButton
            android:id="@+id/saturday_toggle"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:textOn="@string/label_time_block_toggle_saturday"
            android:textOff="@string/label_time_block_toggle_saturday"
            android:onClick="onSetActiveTimes"/>

        <ToggleButton
            android:id="@+id/sunday_toggle"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:textOn="@string/label_time_block_toggle_sunday"
            android:textOff="@string/label_time_block_toggle_sunday"
            android:onClick="onSetActiveTimes" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/weekend_toggles"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical">

    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:paddingTop="@dimen/time_block_spacing"
                 android:paddingBottom="@dimen/time_block_spacing"
                 android:gravity="center_vertical"
                 android:baselineAligned="false">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center">

                <TextView
                    android:id="@+id/start_time_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/time_block_label_padding"
                    android:textSize="@dimen/time_block_label_font_size"
                    android:text="@string/label_time_block_start"/>

                <EditText
                    android:id="@+id/start_time_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/time_block_time_font_size"
                    android:focusable="false"/>

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:gravity="center">

                <TextView
                    android:id="@+id/end_time_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/time_block_label_padding"
                    android:textSize="@dimen/time_block_label_font_size"
                    android:text="@string/label_time_block_end"/>

                <EditText
                    android:id="@+id/end_time_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/time_block_time_font_size"
                    android:focusable="false"/>

            </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/button_row"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/time_block_spacing"
        android:gravity="center_vertical">

        <Button
            android:id="@+id/remove_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_remove_time_block"
            android:onClick="onRemoveTimeBlock"/>

        <Button
            android:id="@+id/save_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_set_time_block"
            android:onClick="onSetActiveTimes"/>

    </LinearLayout>

</LinearLayout>