<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/prompt_label"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"/>

    <TextView
        android:id="@+id/countdown"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/prompt_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"/>

    <Button
        android:id="@+id/prompt_now_button"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_prompt_now"
        android:onClick="onPromptNow"
        android:textAppearance="@android:style/TextAppearance.Large"
        android:paddingTop="18dp"
        android:paddingBottom="18dp"/>

    <Button
        android:id="@+id/prompt_hour_button"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_prompt_hour"
        android:onClick="onPromptHour"
        android:textAppearance="@android:style/TextAppearance.Large"
        android:paddingTop="18dp"
        android:paddingBottom="18dp"/>

    <Button
        android:id="@+id/prompt_twenty_five_button"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_above="@id/prompt_hour_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_prompt_twenty_five"
        android:onClick="onPromptTwentyFive"
        android:textAppearance="@android:style/TextAppearance.Large"
        android:paddingTop="18dp"
        android:paddingBottom="18dp"/>

    <Button
        android:id="@+id/prompt_fifteen_button"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_above="@id/prompt_twenty_five_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_prompt_fifteen"
        android:onClick="onPromptFifteen"
        android:textAppearance="@android:style/TextAppearance.Large"
        android:paddingTop="18dp"
        android:paddingBottom="18dp"/>

    <Button
        android:id="@+id/prompt_five_button"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_above="@id/prompt_fifteen_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_prompt_five"
        android:onClick="onPromptFive"
        android:textAppearance="@android:style/TextAppearance.Large"
        android:paddingTop="18dp"
        android:paddingBottom="18dp"/>

</RelativeLayout>
