<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".PromptTime$SectionActiveTimesFragment">

<LinearLayout
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:gravity="center_horizontal">

    <Button
        android:id="@+id/save_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_set_time_block" />

    <LinearLayout
        android:id="@+id/weekday_toggles"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical">

        <ToggleButton
            android:id="@+id/monday_toggle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textOn="Mon"
            android:textOff="Mon" />

        <ToggleButton
            android:id="@+id/tuesday_toggle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textOn="Tue"
            android:textOff="Tue" />

        <ToggleButton
            android:id="@+id/wednesday_toggle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textOn="Wed"
            android:textOff="Wed" />

        <ToggleButton
            android:id="@+id/thursday_toggle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textOn="Thur"
            android:textOff="Thur" />

        <ToggleButton
            android:id="@+id/friday_toggle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textOn="Fri"
            android:textOff="Fri" />

        </LinearLayout>

    <LinearLayout
        android:id="@+id/weekend_toggles"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical">

        <ToggleButton
            android:id="@+id/saturday_toggle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textOn="Sat"
            android:textOff="Sat" />

        <ToggleButton
            android:id="@+id/sunday_toggle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textOn="Sun"
            android:textOff="Sun" />

        </LinearLayout>

    <LinearLayout
        android:id="@+id/start_time_row"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical">

        <TextView
            android:id="@+id/start_time_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_time_block_start"/>

        <TimePicker
            android:id="@+id/start_time_picker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        </LinearLayout>

    <LinearLayout
        android:id="@+id/end_time_row"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical">

        <TextView
            android:id="@+id/end_time_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_time_block_end"/>

        <TimePicker
            android:id="@+id/end_time_picker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        </LinearLayout>

</LinearLayout>

</ScrollView>
